--- a/style.css
+++ b/style.css
@@ -5,11 +5,42 @@
 }
 
 body {
+  background-color: #15766b;
   display: flex;
   align-items: center;
-  flex-direction: column;
   justify-content: center;
   height: 100vh;
   margin: 0;
   overflow: hidden;
+}
+
+.empty {
+  background: #fff;
+  border: 3px solid #9dad92;
+  height: 150px;
+  margin: 10px;
+  width: 150px;
+}
+
+.fill {
+  background-image: url('https://source.unsplash.com/random/150x150');
+  cursor: pointer;
+  height: 145px;
+  width: 145px;
+}
+
+.hold {
+  border: 5px solid #ccc;
+}
+
+.hovered {
+  background-color: #333;
+  border-color: #fff;
+  border-style: dashed;
+}
+
+@media (max-width: 800px) {
+  body {
+    flex-direction: column;
+  }
 }
